--- a/Cargo.toml
+++ b/Cargo.toml
@@ -102,7 +102,6 @@ futures = { version = "0.3" }
 gethostname = { version = "0.4" }
 home = { version = "0.5" }
 http-cache-reqwest = { version = "0.13", features = ["manager-cacache"] }
-image = { version = "0.24", default-features = false }
 inflector = { package = "Inflector", version = "0.11" }
 ipnet = { version = "2.9", features = ["schemars", "serde"] }
 itertools = { version = "0.12" }
@@ -195,6 +194,7 @@ tracing-subscriber = { version = "0.3", features = [
     "fmt",
     "tracing-log",
 ] }
+v4l = { version = "0.14" }
 url = { version = "2.5", features = ["serde"] }
 uuid = { version = "1.7", features = ["js", "serde", "v4"] }
 which = { version = "6.0" }
