--- a/Cargo.toml
+++ b/Cargo.toml
@@ -102,6 +102,7 @@ futures = { version = "0.3" }
 gethostname = { version = "0.4" }
 home = { version = "0.5" }
 http-cache-reqwest = { version = "0.13", features = ["manager-cacache"] }
+image = { version = "0.24", default-features = false }
 inflector = { package = "Inflector", version = "0.11" }
 ipnet = { version = "2.9", features = ["schemars", "serde"] }
 itertools = { version = "0.12" }
